--- a/public/style.css
+++ b/public/style.css
@@ -7,9 +7,26 @@ body {
     width:200px;
     border-radius:20%;
     border: 8px solid black;
+    margin: 2.5rem;
 }
 
 .btn-container {
     display: flex;
     justify-content: center;
+}
+
+.red {
+    background-color: #d95980;
+}
+
+.yellow {
+    background-color: #f99b45;
+}
+
+.green {
+    background-color: #63aac0;
+}
+
+.purple {
+    background-color: #819ff9;
 }
